# citadel-tools

./: .gitignore  Cargo.toml  Dockerfile  build.sh  docker-compose.yml
citadel-gtk4-installer-ui/: Cargo.toml
citadel-gtk4-installer-ui/data/: confirm_install_page.ui  install_destination_page.ui  install_page.ui  luks_password_page.ui
citadel-gtk4-installer-ui/data_bak/: citadel_password_page.ui  confirm_install_page.ui  install_destination_page.ui  install_page.ui  luks_password_page.ui  welcome_page.ui
citadel-gtk4-installer-ui/src/: builder.rs  main.rs  ui.rs
citadel-installer-ui/: Cargo.toml  manager.xml
citadel-installer-ui/data/: citadel_password_page.ui  confirm_install_page.ui  install_destination_page.ui  welcome_page.ui
citadel-installer-ui/src/: builder.rs  main.rs  rowdata.rs  ui.rs  zbus_client.rs
citadel-realms/src/realmfs/: mod.rs
citadel-tool/: Cargo.toml
citadel-tool/src/: main.rs
citadel-tool/src/boot/: disks.rs  live.rs  mod.rs  rootfs.rs
citadel-tool/src/image/: mod.rs
citadel-tool/src/install/: cli.rs  disk.rs  installer.rs  mod.rs
citadel-tool/src/install_backend/: disk.rs  mod.rs  zbus_server.rs
citadel-tool/src/sync/: desktop_file.rs  desktop_sync.rs  icons.rs  mod.rs  notes.md
citadel-tool/src/update/: mod.rs
data/: com.subgraph.RealmConfig.desktop  com.subgraph.RealmConfig.gschema.xml
libcitadel/: Cargo.toml
libcitadel/src/: cmdline.rs  error.rs  exec.rs  keys.rs  resource.rs  util.rs  verity.rs
libcitadel/src/realm/: config.rs  events.rs  launcher.rs  manager.rs  realm.rs  realms.rs
realm-config-ui/: Cargo.toml
realm-config-ui/src/: error.rs  main.rs  realmsd.rs
realm-config-ui/src/colorscheme/: colorscheme-dialog.ui  colorschemes.rs  dialog.rs  mod.rs
realm-config-ui/src/configure_dialog/: configure-dialog.ui  configure-option-switch.ui  dialog.rs  mod.rs  option_row.rs  options.rs  settings.rs
realm-config-ui/src/new_realm/: dialog.rs  mod.rs  new-realm-dialog.ui  verifier.rs
realmsd/: Cargo.toml
realmsd/src/: events.rs  main.rs  realms_manager.rs
systemd/: citadel-current-watcher.service  citadel-desktop-watcher.service
