[package]
name = "citadel-gtk4-installer-ui"
version = "0.4.0"
edition = "2021"
authors = ["David McKinney <mckinney@subgraph.com>", "isa <isa@subgraph.com>"]
description = "Citadel Installer UI"
homepage = "https://subgraph.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.8", package = "gtk4", features = ["v4_6"]}
libcitadel = { path = "../libcitadel" }
zbus = "2.3"
dbus = "0.8"
gio = "0.15"
glib = "0.15"
glib-macros = "0.14"
gdk = "0.14"
pango = "0.9"
once_cell = "1.0"
