[package]
name = "citadel-gtk4-installer-ui"
version = "0.4.0"
edition = "2021"
authors = ["David McKinney <mckinney@subgraph.com>", "isa <isa@subgraph.com>"]
description = "Citadel Installer UI"
homepage = "https://subgraph.com"

[dependencies]
gtk = { version = "0.4.8", package = "gtk4", features = ["v4_6"]}
libcitadel = { path = "../libcitadel" }
zbus = "2.3"
zvariant = "3.4"
zbus_names = "2.2"
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
gio = "0.15"
glib = "0.15"
glib-macros = "0.14"
gdk = "0.14"
pango = "0.9"
once_cell = "1.0"
env_logger = "0.9"
log = "0.4"
