[package]
name = "citadel-tool"
version = "0.1.0"
authors = ["Bruce Leidl <bruce@subgraph.com>"]
edition = "2018"
description = "citadel-tool"
homepage = "https://subgraph.com"

[dependencies]
libcitadel = { path = "../libcitadel" }
rpassword = "4.0"
clap = "2.33"
lazy_static = "1.4"
serde_derive = "1.0"
serde = "1.0"
toml = "0.5"
hex = "0.4"
byteorder = "1"
zbus = "2.3"
zvariant = "3.4"
zbus_names = "2.2"
pwhash = "0.3.1"
tempfile = "3"
env_logger = "0.9"
log = "0.4"
udev = "0.6"
zbus_macros = "*"
async-std = {version = "1.12", features = ["attributes"]}
event-listener = "*"
futures = "0.3"
futures-util = "0.3"
